import "base/base.proto";

package dist_clang.client.proto;

message Plugin {
  enum Platform {
    UNKNOWN = 0;
    LINUX   = 1;
    MACOSX  = 2;
    WIN     = 3;
  }

  required string name = 1;
  required string path = 2;
  optional Platform os = 3 [ default = UNKNOWN ];
}

message Configuration {
  required string path            = 1;
  optional string version         = 2;

  optional uint32 connect_timeout = 3 [ default = 10 ];
  // in seconds. Zero means default.

  optional uint32 send_timeout    = 4 [ default = 5  ];
  // in seconds.

  optional uint32 read_timeout    = 5 [ default = 60 ];
  // in seconds.

  optional uint32 read_minimum    = 6 [ default = 32 ];
  // in bytes.

  repeated Plugin plugins         = 7;
  optional bool disabled          = 8 [ default = false ];
  optional base.proto.Verbosity verbosity = 9;

  optional bool rewrite_includes  = 10 [ default = false ];
  // Use -frewrite-includes flag while preprocessing source code to make macros
  // uses remain in code to prevent possible failures on remote hosts due to
  // different treating of expanded source code by clang.
}
